--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/GregorisSolis/js-portfolio-random.git",
   "name": "dulceamor",
   "private": true,
   "version": "0.0.0",
